fix: dropdown overflow

--- a/styles/bootstrap/bootstrap-sass/assets/stylesheets/bootstrap/_dropdowns.scss
+++ b/styles/bootstrap/bootstrap-sass/assets/stylesheets/bootstrap/_dropdowns.scss
@@ -45,6 +45,7 @@
   &.select {
     top: 0 !important;
     left: 0 !important;
+    overflow-y: auto !important;
   }
 
   // Aligns the dropdown menu to right
